@@ -1,3 +1,8 @@
+2008-04-22  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
+        * Fix vector initialisation bug at run change in
+          TrigT1CaloCpmMonTool
+        * Tag as TrigT1CaloMonitoring-00-03-04
+
 2008-04-04  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
         * Update TrigT1CaloMonitoring_forRecExCommission.py 
           for CPMSimBSMon
